# AI-Platform

./: .env.production  .gitignore  DEPLOY.md  DOCKER_DEPLOY.md  README.md  deploy.sh  docker-compose.yml  setup.sh
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 49a7238d3db4_init.py  c339b65def9e_fix_started_at_length.py  da9041154e13_add_external_task_id_to_ai_task.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  chat.py  export.py  material.py  quota.py  task.py
backend/app/core/: config.py  database.py  exceptions.py  redis.py  response.py  security.py
backend/app/models/: __init__.py  ai_model.py  ai_task.py  base.py  chat_history.py  material.py  order.py  quota_log.py  task_flow.py  task_item.py  user.py  user_quota.py
backend/app/services/: chat_service.py  dashscope_service.py  oss_service.py  quota_service.py  task_service.py  user_service.py  wanx_service.py
backend/app/tasks/: ai_tasks.py  celery_app.py
backend/init-db/: init.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: auth.js  chat.js  material.js  quota.js  request.js  task.js
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.js
frontend/src/stores/: user.js
frontend/src/views/: About.vue  Chat.vue  Create.vue  Login.vue  Materials.vue  Profile.vue  Quota.vue  Register.vue  Tasks.vue
