[project]
name = "ai-platform"
version = "1.0.0"
description = "AI 全能创作平台后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0",
    "bcrypt==4.1.2",
    "dashscope==1.14.1",
    "oss2==2.18.4",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "pyjwt==2.8.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "transitions==0.9.0",
    "celery==5.3.6",
    "openai==1.10.0",
    "aiohttp==3.9.1",
    "httpx==0.26.0",
    "python-jose[cryptography]==3.3.0",
    "oss2==2.18.4",
    "cos-python-sdk-v5==1.9.28",
    "pillow==10.2.0",
    "python-magic==0.4.27",
    "websockets==12.0",
    "sse-starlette==2.0.0",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.uv]
required-version = ">=0.4.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
